# FakeMinecraft

./: .gitignore  CMakeLists.txt  README.md
Game_Source_Code/: README.md
Game_Source_Code/CMakeScripts/: PowerShell.cmake
Game_Source_Code/assets/shaders/: fluids_vertex_shader.glsl
Game_Source_Code/src/: Application.cpp  Block.cpp  Camera.cpp  GameObject.cpp  SurfaceFeature.cpp  WorldGen.cpp
Game_Source_Code/src/Chunk/: Chunk.cpp
Game_Source_Code/src/Chunk/headers/: ChunkPos.h
Game_Source_Code/src/UI/: Slider.cpp
Game_Source_Code/src/Vertices/: BillboardVertex.h  WorldVertex.h
Game_Source_Code/src/headers/: GameObject.h  NoiseSettings.h  Planet.h  SurfaceFeature.h
assets/shaders/: bbox_vertex.glsl  billboard_fragment_shader.glsl  billboard_vertex_shader.glsl  block_outline_vertex_shader.glsl  fluids_fragment_shader.glsl  fluids_vertex_shader.glsl  fragment_shader.glsl  shadow_mapping_depth.vert  sky_fragment_shader.glsl  sky_vertex_shader.glsl  vertex_shader.glsl  world_fragment_shader.glsl  world_vertex_shader.glsl
dependencies/include/: Graphics.h  Texture.h  graphics.h
dependencies/lib/: sgg.lib
src/: Application.cpp  Block.cpp  Camera.cpp  CheckBox.cpp  Chunk.cpp  GameObject.cpp  NoiseSettings.cpp  Physics.cpp  Planet.cpp  Slider.cpp  TypeBox.cpp  WorldGen.cpp  main.cpp
src/Chunk/: Chunk.cpp  ChunkData.cpp
src/Chunk/headers/: Chunk.h  ChunkData.h  ChunkPos.h  ChunkPosHash.h
src/Core/: Application.cpp  Camera.cpp  GameObject.cpp  Physics.cpp
src/Core/headers/: Camera.h  GameObject.h  Physics.h  ThreadPool.h  TupleHash.h
src/Engine/: GraphicsEngine3D.cpp  GraphicsEngine3D.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h
src/Renderer/: TextureManager.cpp
src/Renderer/Vertices/: BillboardVertex.h  FluidVertex.h  WorldVertex.h  _Vertex.h
src/Renderer/headers/: Frustum.h  TextureManager.h
src/UI/: Button.cpp  CheckBox.cpp  Slider.cpp  TypeBox.cpp
src/UI/headers/: Button.h  CheckBox.h  Slider.h  TypeBox.h
src/Vertices/: FluidVertex.h  _Vertex.h
src/World/: Block.cpp  NoiseSettings.cpp  Planet.cpp  Sky.cpp  SurfaceFeature.cpp  WorldGen.cpp
src/World/Chunk/: Chunk.cpp  ChunkData.cpp  ChunkFaceGeneration.cpp  ChunkLighting.cpp  ChunkMeshGeneration.cpp  ChunkRendering.cpp
src/World/Chunk/headers/: Chunk.h  ChunkData.h  ChunkGreedyMeshing.h  ChunkPos.h  ChunkPosHash.h  ChunkUtils.h
src/World/Generation/: BigTreeFeature.h  Biome.h  BiomeRegistry.h  Feature.h  LakeFeature.h  OreFeature.h  TreeFeature.h  VegetationFeature.h
src/World/headers/: Block.h  BlockBuilder.h  BlockRegistry.h  Blocks.h  NoiseSettings.h  Planet.h  Sky.h  WorldConstants.h  WorldGen.h
src/graphicsEngine3D/: 3DEngine.cpp  Matrix4x4.h  Mesh.h  Triangle.h  Utility.cpp  Utility.h  Vec3D.h
src/headers/: Block.h  Blocks.h  Camera.h  Chunk.h  GameObject.h  Planet.h  Slider.h  TypeBox.h  WorldGen.h
